[gd_scene load_steps=83 format=3 uid="uid://c1u8eudxewsj2"]

[ext_resource type="Texture2D" uid="uid://blxyslkgy38ei" path="res://Dragon/Dragon_sprite_sheet_noback.png" id="1_mf2cg"]
[ext_resource type="Script" path="res://scripts/enemies/Dragon.gd" id="1_yyncg"]
[ext_resource type="Texture2D" uid="uid://fsrpdcr8atrk" path="res://assets/Fires-Black/Small_Blackball_10x26.png" id="2_j56io"]
[ext_resource type="Script" path="res://scripts/FSM/FiniteStateMachine.gd" id="4_nwhp6"]
[ext_resource type="Script" path="res://scripts/FSM/Dragon_idle_state.gd" id="5_pv68l"]
[ext_resource type="Script" path="res://scripts/FSM/Dragon_dash_state.gd" id="6_iya0u"]
[ext_resource type="Script" path="res://scripts/enemies/EnemyAttack.gd" id="7_bwsml"]
[ext_resource type="Script" path="res://scripts/FSM/Dragon_explode_state.gd" id="7_p36d0"]
[ext_resource type="Script" path="res://scripts/enemies/CollisionDamage.gd" id="8_7f0qq"]
[ext_resource type="AudioStream" uid="uid://cflhnybp32lj3" path="res://Audio/SFX/10_Battle_SFX/77_flesh_02.wav" id="9_d3vli"]
[ext_resource type="AudioStream" uid="uid://bosd7l3q07sh5" path="res://Audio/SFX/10_Battle_SFX/15_Impact_flesh_02.wav" id="10_0km4s"]
[ext_resource type="AudioStream" uid="uid://dbllym8ev65c1" path="res://Audio/SFX/10_Battle_SFX/35_Miss_Evade_02.wav" id="12_2q4kd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nsspb"]
atlas = ExtResource("2_j56io")
region = Rect2(0, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiuyi"]
atlas = ExtResource("2_j56io")
region = Rect2(10, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrhyk"]
atlas = ExtResource("2_j56io")
region = Rect2(20, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5nr2"]
atlas = ExtResource("2_j56io")
region = Rect2(30, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5hpl"]
atlas = ExtResource("2_j56io")
region = Rect2(40, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_nifq8"]
atlas = ExtResource("2_j56io")
region = Rect2(50, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_syn0d"]
atlas = ExtResource("2_j56io")
region = Rect2(60, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7ss7"]
atlas = ExtResource("2_j56io")
region = Rect2(70, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_66p10"]
atlas = ExtResource("2_j56io")
region = Rect2(80, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhfig"]
atlas = ExtResource("2_j56io")
region = Rect2(90, 0, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4qhy"]
atlas = ExtResource("2_j56io")
region = Rect2(0, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jey7b"]
atlas = ExtResource("2_j56io")
region = Rect2(10, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ea2"]
atlas = ExtResource("2_j56io")
region = Rect2(20, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_55r27"]
atlas = ExtResource("2_j56io")
region = Rect2(30, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp72w"]
atlas = ExtResource("2_j56io")
region = Rect2(40, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw2vo"]
atlas = ExtResource("2_j56io")
region = Rect2(50, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6pdf"]
atlas = ExtResource("2_j56io")
region = Rect2(60, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmy58"]
atlas = ExtResource("2_j56io")
region = Rect2(70, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0383"]
atlas = ExtResource("2_j56io")
region = Rect2(80, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fcqk"]
atlas = ExtResource("2_j56io")
region = Rect2(90, 26, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuaxi"]
atlas = ExtResource("2_j56io")
region = Rect2(0, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh106"]
atlas = ExtResource("2_j56io")
region = Rect2(10, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgtej"]
atlas = ExtResource("2_j56io")
region = Rect2(20, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvnfe"]
atlas = ExtResource("2_j56io")
region = Rect2(30, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_381p2"]
atlas = ExtResource("2_j56io")
region = Rect2(40, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_etkpv"]
atlas = ExtResource("2_j56io")
region = Rect2(50, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju40s"]
atlas = ExtResource("2_j56io")
region = Rect2(60, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0drn"]
atlas = ExtResource("2_j56io")
region = Rect2(70, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjry7"]
atlas = ExtResource("2_j56io")
region = Rect2(80, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_m25xj"]
atlas = ExtResource("2_j56io")
region = Rect2(90, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxjes"]
atlas = ExtResource("2_j56io")
region = Rect2(0, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry0px"]
atlas = ExtResource("2_j56io")
region = Rect2(10, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kxsc"]
atlas = ExtResource("2_j56io")
region = Rect2(20, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyunf"]
atlas = ExtResource("2_j56io")
region = Rect2(30, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajmcs"]
atlas = ExtResource("2_j56io")
region = Rect2(40, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5hpl"]
atlas = ExtResource("2_j56io")
region = Rect2(50, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwu61"]
atlas = ExtResource("2_j56io")
region = Rect2(60, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8b4u"]
atlas = ExtResource("2_j56io")
region = Rect2(70, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgtkg"]
atlas = ExtResource("2_j56io")
region = Rect2(80, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_325tn"]
atlas = ExtResource("2_j56io")
region = Rect2(90, 78, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x1k7"]
atlas = ExtResource("2_j56io")
region = Rect2(0, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_72hff"]
atlas = ExtResource("2_j56io")
region = Rect2(10, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7usfa"]
atlas = ExtResource("2_j56io")
region = Rect2(20, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6tff"]
atlas = ExtResource("2_j56io")
region = Rect2(30, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5y6k"]
atlas = ExtResource("2_j56io")
region = Rect2(40, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlelu"]
atlas = ExtResource("2_j56io")
region = Rect2(50, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yfbi"]
atlas = ExtResource("2_j56io")
region = Rect2(60, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_i002b"]
atlas = ExtResource("2_j56io")
region = Rect2(70, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr0ve"]
atlas = ExtResource("2_j56io")
region = Rect2(80, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_llaa2"]
atlas = ExtResource("2_j56io")
region = Rect2(90, 104, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7jds"]
atlas = ExtResource("2_j56io")
region = Rect2(0, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbb2w"]
atlas = ExtResource("2_j56io")
region = Rect2(10, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_warq7"]
atlas = ExtResource("2_j56io")
region = Rect2(20, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3l4o"]
atlas = ExtResource("2_j56io")
region = Rect2(30, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpu4a"]
atlas = ExtResource("2_j56io")
region = Rect2(40, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ben5x"]
atlas = ExtResource("2_j56io")
region = Rect2(50, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_r66qr"]
atlas = ExtResource("2_j56io")
region = Rect2(60, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_u73s3"]
atlas = ExtResource("2_j56io")
region = Rect2(70, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b8ej"]
atlas = ExtResource("2_j56io")
region = Rect2(80, 130, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_iho5w"]
atlas = ExtResource("2_j56io")
region = Rect2(90, 130, 10, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_w3j7j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsspb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiuyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrhyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5nr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5hpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nifq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syn0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7ss7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66p10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhfig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4qhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jey7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ea2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55r27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp72w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw2vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6pdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmy58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0383")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fcqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuaxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh106")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgtej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvnfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_381p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etkpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju40s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0drn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjry7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m25xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxjes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry0px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kxsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyunf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajmcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5hpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwu61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8b4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgtkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_325tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x1k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72hff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7usfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6tff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5y6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlelu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yfbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i002b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr0ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llaa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7jds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbb2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_warq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3l4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpu4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ben5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r66qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u73s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b8ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iho5w")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_xue7x"]
resource_name = "Dash"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mf2cg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 1, 1.2, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 16, 17, 16, 17, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.8, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FSM/Dash")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.8, 2.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_stop_movement"
}, {
"args": [],
"method": &"explode_logic"
}]
}

[sub_resource type="Animation" id="Animation_bnei3"]
resource_name = "Explode"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mf2cg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FSM/Explode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Exit"
}]
}

[sub_resource type="Animation" id="Animation_8x7nq"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mf2cg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_suinq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mf2cg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ac0f"]
_data = {
"Dash": SubResource("Animation_xue7x"),
"Explode": SubResource("Animation_bnei3"),
"Idle": SubResource("Animation_8x7nq"),
"RESET": SubResource("Animation_suinq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_natxl"]
size = Vector2(19.625, 33.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05t4y"]
size = Vector2(236, 112)

[sub_resource type="CircleShape2D" id="CircleShape2D_d51bt"]
radius = 22.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_km3jp"]
radius = 21.0238

[node name="Dragon" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 14
script = ExtResource("1_yyncg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mf2cg")
hframes = 24

[node name="FlameAnimation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -8)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_w3j7j")
animation = &"Idle"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ac0f")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_natxl")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_nwhp6")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("5_pv68l")

[node name="Dash" type="Node" parent="FSM"]
script = ExtResource("6_iya0u")

[node name="Explode" type="Node" parent="FSM"]
script = ExtResource("7_p36d0")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(141, -4)
shape = SubResource("RectangleShape2D_05t4y")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("7_bwsml")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_d51bt")

[node name="Collider" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("8_7f0qq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
position = Vector2(-3, -6)
shape = SubResource("CircleShape2D_km3jp")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_d3vli")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_0km4s")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_2q4kd")

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="FSM/Idle" method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="AttackArea" to="AttackArea" method="_on_body_entered"]
[connection signal="body_entered" from="Collider" to="Collider" method="_on_body_entered"]
[connection signal="timeout" from="PatrolTimer" to="FSM/Idle" method="_on_patrol_timer_timeout"]
